# ams

./: Cargo.toml  LICENSE  README.md
ams/: Cargo.toml
ams-core/: Cargo.toml
ams-core/src/: api.rs  connection.rs  lib.rs
ams-core/src/layers/: transmit.rs
ams-tui/: Cargo.toml
ams-tui/src/: app_state.rs  lib.rs  widgets.rs
ams-tui/src/app_state/: chat_dashboard.rs  dashboard.rs
ams-tui/src/lang/: en.rs
ams-tui/src/widgets/: chat.rs  chat_dashboard.rs  dashboard.rs
ams/src/: api.rs  connection.rs  connection_manager.rs  controller.rs  layers.rs  lib.rs
ams/src/layers/: transmit.rs
